--- a/training/llama3.1/requirements.txt
+++ b/training/llama3.1/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/Snowflake-Labs/DeepSpeed.git@ds-llama
+deepspeed==0.14.5
 transformers==4.43.3
 triton==2.3.0
 huggingface_hub[hf_transfer]
